# Practice_Programs_C-

./: README.md
Producer_consumer/: CMakeLists.txt  producer_consumer  producer_consumer.cpp
TCPServer_Client/: CMakeLists.txt  client.cpp  server.cpp
smart-mirror/: requirements.txt  smart_mirror.spec  weather_display.py
smart-mirror/Python-3.12.1/: Makefile  Makefile.pre  config.status  python  python-config
smart-mirror/Python-3.12.1/Misc/: python-config.sh
smart-mirror/Python-3.12.1/Modules/: ld_so_aix
smart-mirror/Python-3.12.1/Programs/: _testembed
